--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,11 @@
     <link rel="stylesheet" href="/build/bundle.css" />
 
     <script defer src="/build/bundle.js"></script>
+    <style>
+      :root[data-theme="dark"] {
+        background-color: #333;
+      }
+    </style>
   </head>
   <script>
     // prepares the document theme
